fix: body copy lenth too wide

--- a/main.css
+++ b/main.css
@@ -466,6 +466,11 @@ body {
 .biz-day-section__container {
   height: 100%;
 }
+@media only screen and (max-width: 600px) {
+  .biz-day-section__container {
+    height: auto;
+  }
+}
 .biz-day-section__container .biz-day-section__wrapper {
   margin: 0 auto;
   text-align: center;
@@ -488,6 +493,11 @@ body {
 }
 .biz-day-section__container .biz-day-section__wrapper .biz-day-content__wrapper, .biz-day-section__container .biz-day-section__wrapper .biz-day-card__wrapper {
   padding: 50px 190px;
+}
+@media only screen and (max-width: 600px) {
+  .biz-day-section__container .biz-day-section__wrapper .biz-day-content__wrapper, .biz-day-section__container .biz-day-section__wrapper .biz-day-card__wrapper {
+    padding: 50px 0;
+  }
 }
 .biz-day-section__container .biz-day-section__wrapper .biz-day-content__wrapper .biz-day__phrase:after, .biz-day-section__container .biz-day-section__wrapper .biz-day-card__wrapper .biz-day__phrase:after {
   background-color: #000;
